--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+
 language: python
 python:
   - "3.6"
@@ -5,7 +6,7 @@ python:
 services:
   - docker
 
-before script: pip install docker-compose
+before_script: pip install docker-compose
 
 script:
-  -docker-compose run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
